[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setup.packages.find]
where =["src"]

[tool.ty.environment]
root = ["./src/merakicat"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I",        # Sort imports properly
    "A",        # detect shadowed builtins
]